force-app/main/default/objects/Trigger_Handler__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Should the trigger class be run? Only uncheck this with extreme caution as it disabling an important triggers could cause data inconsistency</description>
    <inlineHelpText>Should the trigger class be run? Only uncheck this with extreme caution as it disabling an important triggers could cause data inconsistency</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>