force-app/main/default/objects/Trigger_Handler__mdt/fields/Class_Name__c.field-meta.xml
<CustomField>
    <fullName>Class_Name__c</fullName>
    <description>The Apex class to run</description>
    <inlineHelpText>The Apex class to run</inlineHelpText>
    <label>Class Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>