force-app/main/default/objects/Trigger_Handler__mdt/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <description>Trigger event to run this handler</description>
    <inlineHelpText>Trigger event to run this handler</inlineHelpText>
    <label>Event</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BeforeInsert</fullName>
                <default>true</default>
                <label>BeforeInsert</label>
            </value>
            <value>
                <fullName>BeforeUpdate</fullName>
            </value>
            <value>
                <fullName>BeforeDelete</fullName>
            </value>
            <value>
                <fullName>AfterInsert</fullName>
            </value>
            <value>
                <fullName>AfterUpdate</fullName>
            </value>
            <value>
                <fullName>AfterDelete</fullName>
            </value>
            <value>
                <fullName>AfterUndelete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>