force-app/main/default/objects/Trigger_Handler__mdt/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Handlers are run in ascending order of this field for a given sObject and Event. If order is unimportant, you can just use 0.</description>
    <inlineHelpText>Handlers are run in ascending order of this field for a given sObject and Event Handlers are run in ascending order of this field for a given sObject and Event. If order is unimportant, you can just use 0.</inlineHelpText>
    <label>Order</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>