force-app/main/default/objects/Trigger_Handler__mdt/fields/RunOnce__c.field-meta.xml
<CustomField>
    <fullName>RunOnce__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Run Once</label>
    <type>Checkbox</type>
</CustomField>