force-app/main/default/objects/Trigger_Handler__mdt/fields/sObject__c.field-meta.xml
<CustomField>
    <fullName>sObject__c</fullName>
    <description>The sObject to run the handler on</description>
    <inlineHelpText>The sObject to run the handler on</inlineHelpText>
    <label>sObject</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>